Fix CSS style of code blocks scrollbars.

--- a/src/mwiki/static/style.css
+++ b/src/mwiki/static/style.css
@@ -208,12 +208,6 @@ span.search-highlight  {
     margin-block-end: 5px !important;
 }
 
-pre {
-    margin-top: 10px     !important;
-    margin-bottom: 10px  !important;
-    font-family: "IBM Plex Mono" !important;
-    line-height: initial;
-}
 
 /** Definition List **/
 dl {
@@ -673,27 +667,32 @@ select:focus {
     left: 0px !important;
 }
 
+
+pre {
+    background-color: lightyellow;
+    padding: 5px;
+    margin-top: 8pt     !important;
+    margin-bottom: 10px  !important;
+    font-family: "IBM Plex Mono" !important;
+    line-height: initial;
+    overflow-x: auto !important;
+    overflow-y: auto !important;
+    /** max-height: 400px;  */  /** TODO @TODO  Enable this property later. */
+}
+
 .highlight {
     background-color: lightyellow;
     font-family: "IBM Plex Mono";
-    font-size: 10px;
-    margin: 0px 1px;
-    padding: 0px 2px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-    max-height: 400px;
+    /* overflow-x: auto; */
+    /* overflow-y: auto;  */
 }
 
 .source-code {
     background-color: lightyellow;
     display: block;
     font-family:  "IBM Plex Mono";
-    font-size: 10px;
-    margin: 0px 1px;
-    padding: 0px 2px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-    max-height: 400px;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 
